# AccountManagerWithActix

./: Cargo.toml  LICENSE  sqlite3.lib
Tools/: Database_4.1_to_actix.py  Database_5.0_to5.0.1.py  GetInitDatabaseSqlite3.py
pipelines/: azure.yaml
src/: main.rs
src/data_generator/: mod.rs
src/sql_operator/: mod.rs
