[package]
name = "AccountManagerWithActix"
version = "5.0.1"
authors = ["Anest"]
edition = "2021"

[dependencies]
rand = "0.8.3"
rusqlite = { version = "0.32.1" }
base64 = { version = "0.22.1" }
chrono = "0.4.19"
serde = { version = "1.0.120", features = ["derive"], default-features = false }
rustls = { version = "0.23.16", features = ["ring"], default-features = false }
futures-util = "0.3.12"
actix-web = { version = "4.9.0", features = ["macros", "rustls-0_23"], default-features = false }
rustls-pemfile = "2.2.0"

[profile.release]
panic = 'abort'

